samples/_failures_safe/1761696393_94c458_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8054a57.c: In function ‘main’:
./samples/SAFE/__tmp_d8054a57.c:142:29: error: expected ‘)’ at end of input
  142 |     if (compressed_size == 0
      |        ~                    ^
      |                             )
./samples/SAFE/__tmp_d8054a57.c:142:5: error: expected declaration or statement at end of input
  142 |     if (compressed_size == 0
      |     ^~
